sample/errors/sample_0c.nev

func main() -> int
{
    let a = 10;
    let a = 10;

    0
}